--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
          </nav>
           <div class="container">
-            <img src="F:/Web Dev/Resume/images/img_carpediem.jfif" class="img-circle">
+            <img src="images/img_carpediem.jfif" class="img-circle">
             <h1>Anushka Chaudhuri</h1>
             <p>IT Undergrad.</p> 
             <p>I am a student and developer focused on problem solving.</p>
