--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="#">About Me</a></li>
-                  <li><a href="#">Resume</a></li>
+                  <li><a href="Resume1.pdf">Resume</a></li>
                 </ul>
               </div>
             </div>
