--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="container">
             <img src="images/img_carpediem.jfif" class="img-circle">
             <h1>Anushka Chaudhuri</h1>
-            <p>IT Undergrad.</p> 
+            <p>CS Undergrad.</p> 
             <p>I am a student and developer focused on problem solving.</p>
             <p>I love cosmos, tech and travelling!</p>
             <div class="links">
