--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="#">About Me</a></li>
-                  <li><a href="Anushka Chaudhuri.pdf">Resume</a></li>
+                  <li><a href="Anushka's Resume.pdf">Resume</a></li>
                 </ul>
               </div>
             </div>
