--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
          </nav>
           <div class="container">
-            <img src="images/img_carpediem.jfif" class="img-circle">
+            <img src="images/IMG-20210405-WA0013.jpg" class="img-circle">
             <h1>Anushka Chaudhuri</h1>
             <p>CS Undergrad.</p> 
             <p>I am a student and developer focused on problem solving.</p>
