--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="links">
               <a class="github" href="https://github.com/anushka0301"><i class="fa fa-github" aria-hidden="true"></i></i></a>
               <a class="facebook" href="https://www.facebook.com/anushka.chaudhuri.03/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              <a class="instagram" href="https://www.instagram.com/anushka03/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a class="instagram" href="https://www.instagram.com/_.anushka_chaudhuri._/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </div>     
           </div>
 
